T187969 Prevent horizontal scrolling on diff

--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -261,6 +261,7 @@ body {
 	.table th,
 	.table td {
 		border: none;
+		word-wrap: break-word;
 	}
 	.diff-empty {
 		width: 50%;
